--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,6 +3,7 @@ $white_color: #fdfdfd;
 $gray_color: #9b9b9b;
 $gray_color_1: #272727;
 $gray_color_2: #5b5b5b;
+$gray_color_3: #131313;
 $accent_color: #f42;
 $accent_color_1: #ffebe8;
 $accent_color_2: #fffaf8;
@@ -16,9 +17,6 @@ $font_2: 'Balsamiq Sans', cursive, sans-serif;
 
 $menu_background: linear-gradient(to bottom right, $btn_hover_color_2, $accent_color 85%);
 
-// font-family: 'Allura', cursive;
-// font-family: 'Italianno', cursive;
-// font-family: 'Sansita Swashed', cursive;
 $xl_screen: "(min-width: 1200px)";
 $lg_screen: "(max-width: 1200px)";
 $md_screen : "(max-width: 812px)";
