--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -57,6 +57,13 @@ a {
   display: none;
 }
 
+.fixed {
+  position: fixed;
+  z-index: 55;
+  width: 100%;
+  margin-right: 20px;
+}
+
 .open_menu {
   display: block;
   transition: all 0.5s ease-in-out;
