--- a/scss/_latest_deals.scss
+++ b/scss/_latest_deals.scss
@@ -102,7 +102,7 @@
         }
 
         .current-price {
-          color: $gray_color_1 !important;
+          color: $gray_color_1;
           font-size: 18px;
         }
       }
