--- a/scss/_latest_funding.scss
+++ b/scss/_latest_funding.scss
@@ -165,6 +165,10 @@
           }
         }
       }
+
+      &:nth-of-type(1) {
+        @include hide_on("lg_screen");
+      }
     }
 
     @include breakpoint($lg_screen) {
